Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -139,6 +139,8 @@
         "_jfJBLzSDWEK",
         "oPD8cNOfDWHz",
         "z02YtuKLBZ4I",
+        "9htQLovxP2yg",
+        "lZKH_zYO8WIc",
         "_YraW6oaPx0y",
         "eWsnwFm3PyO6",
         "YmNhCb79bUUH",
@@ -231,7 +233,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyM7xEmGlDUQxhAUXxct1ukf",
+      "authorship_tag": "ABX9TyN9Y8tvHyPAG5OD0hyfNEKh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4465,10 +4467,166 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "JY9rxOI0yxsI"
+      },
+      "source": [
+        "### **16단계 : 누적 합===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EIsl3dkjyxsJ"
+      },
+      "source": [
+        "####  11659번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IJ1PhdMGyxsJ"
+      },
+      "source": [
+        "import sys\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                             # 메인 함수\n",
+        "    n, m = map(int, input().split())        # 수의 개수와 합을 구하는 횟수 입력\n",
+        "\n",
+        "    s = list(map(int, input().split()))     # n개의 수 입력\n",
+        "\n",
+        "    res = [0] * (n+1)                       # 누적합 리스트 생성\n",
+        "\n",
+        "    for i in range(n):                      # 수의 개수 만큼 반복\n",
+        "        res[i+1] = res[i] + s[i]                # 누적합 계산\n",
+        "\n",
+        "    for _ in range(m):                      # 구하는 횟수 만큼 반복\n",
+        "        i, j = map(int, input().split())        # 구간 입력\n",
+        "        print(res[j] - res[i-1])                # 누적 구간의 차이 출력\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행 "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "50_NVyaFy-LT"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-W5qTkPPy-LT"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Seh2rD3ty-SC"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R-w_RMp5y-SC"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8OMkuM-6y-YY"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mTBSu9QKy-YZ"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zs_32YGiy-e9"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iHm0nJ74y-e9"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "hsMNobW4-gJP"
       },
       "source": [
-        "### **16단계 : 그리디 알고리즘===========**"
+        "### **17단계 : 그리디 알고리즘===========**"
       ]
     },
     {
@@ -4689,7 +4847,7 @@
         "id": "meZqnuly1Ns1"
       },
       "source": [
-        "### **17단계 : 정수론 및 조합론===========**"
+        "### **18단계 : 정수론 및 조합론===========**"
       ]
     },
     {
@@ -5141,7 +5299,7 @@
         "id": "XK9REonP1NwI"
       },
       "source": [
-        "### 18단계 : 스택===========**"
+        "### 19단계 : 스택===========**"
       ]
     },
     {
@@ -5440,7 +5598,7 @@
         "id": "71RWUsr01OEe"
       },
       "source": [
-        "### 19단계 : 큐, 덱===========**"
+        "### 20단계 : 큐, 덱===========**"
       ]
     },
     {
@@ -5940,7 +6098,7 @@
         "id": "lh6uv54_bdBm"
       },
       "source": [
-        "### 20단계 : 분할정복===========**"
+        "### 21단계 : 분할정복===========**"
       ]
     },
     {
@@ -6529,7 +6687,7 @@
         "id": "rKOdiegqolxT"
       },
       "source": [
-        "### 21단계 : 이분탐색===========**"
+        "### 22단계 : 이분탐색===========**"
       ]
     },
     {
@@ -6922,7 +7080,7 @@
         "id": "Jc_IjbKpL6wm"
       },
       "source": [
-        "### 22단계 : 우선순위 큐===========**"
+        "### 23단계 : 우선순위 큐===========**"
       ]
     },
     {
@@ -7318,7 +7476,7 @@
         "id": "vUcr9l-QBV2m"
       },
       "source": [
-        "### 23단계 : 동적계획법2===========**"
+        "### 24단계 : 동적계획법2===========**"
       ]
     },
     {
@@ -7648,7 +7806,7 @@
         "id": "PkFTWJFFBZxw"
       },
       "source": [
-        "### 24단계 : DFS와 BFS===========**\n",
+        "### 25단계 : DFS와 BFS===========**\n",
         "    sys.setrecursionlimit(1000000000)"
       ]
     },
@@ -8312,7 +8470,7 @@
         "id": "z02YtuKLBZ4I"
       },
       "source": [
-        "### 25단계 : 최단경로==========="
+        "### 26단계 : 최단경로==========="
       ]
     },
     {
@@ -8423,6 +8581,54 @@
         "result = min(start_res[v1] + v1_res[v2] + v2_res[v],\\\n",
         "             start_res[v2] + v2_res[v1] + v1_res[v])\n",
         "print(result if result < int(1e9) else -1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lZKH_zYO8WIc"
+      },
+      "source": [
+        "####   13549번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OAoQlfSL8WIg"
+      },
+      "source": [
+        "import sys, heapq\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                                         # 메인 함수\n",
+        "    n, k = map(int, input().split())                    # 수빈이와 동생의 위치 입력\n",
+        "\n",
+        "    res = [float('inf')] * int(1e5+1)                   # 각 지점에 가는데 걸린 시간 리스트생성\n",
+        "    res[n] = 0                                          # 현재 수빈이 위치는 가는데 0 시간\n",
+        "\n",
+        "    q = []                                              # 큐 생성\n",
+        "    heapq.heappush(q, (0,n))                            # heapq 모듈을 활용하여 (초기 시간, 수빈이 위치) 입력\n",
+        "    while q:                                            # 큐가 존재할 동안 반복\n",
+        "        time, now = heapq.heappop(q)                        # 큐의 데이터 중 하나를 time, now로 unzip\n",
+        "        if res[now] < time:                                 # 현재 방법보다 더 빠르게 갈 수 있으면\n",
+        "            continue                                            # 다음 큐 진행\n",
+        "        \n",
+        "        for i, j in [[1,  +1] ,[1, -1],[0, now]]:           # 걷는 법과 텔레포트 방법 세가지 방법\n",
+        "            next_time = time + i                                # 이동한 시간\n",
+        "            next_position = now + j                             # 이동한 위치\n",
+        "            if 0 <= next_position <= int(1e5):                  # 이동한 위치가 리스트를 벗어나지 않고\n",
+        "                if next_time < res[next_position]:                  # 이동한 위치로 가는 시간보다 더 좋은 방법이 없으면\n",
+        "                    res[next_position] = next_time                      # 이동한 위치를 이동한 시간으로 업데이트\n",
+        "                    heapq.heappush(q, (next_time, next_position))       # 큐에 [이동한 시간, 이동한 위치] 추가\n",
+        "\n",
+        "    print(res[k])                                       # 동생이 있는 지점으로 가는 가장 빠른 시간 출력\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
       ],
       "execution_count": null,
       "outputs": []
@@ -8728,7 +8934,7 @@
         "id": "_YraW6oaPx0y"
       },
       "source": [
-        "### 26단계 : 투 포인터===========**"
+        "### 27단계 : 투 포인터===========**"
       ]
     },
     {
@@ -8994,7 +9200,7 @@
         "id": "eWsnwFm3PyO6"
       },
       "source": [
-        "### 27단계 : 동적 계획법과 최단거리 역추적==========="
+        "### 28단계 : 동적 계획법과 최단거리 역추적==========="
       ]
     },
     {
@@ -9554,7 +9760,7 @@
         "id": "YmNhCb79bUUH"
       },
       "source": [
-        "### 28단계 : 트리===========**"
+        "### 29단계 : 트리===========**"
       ]
     },
     {
@@ -9988,7 +10194,7 @@
         "id": "xkIriFz6cHx4"
       },
       "source": [
-        "### 29단계 : 유니온 파인드===========**"
+        "### 30단계 : 유니온 파인드===========**"
       ]
     },
     {
@@ -10273,7 +10479,7 @@
         "id": "G3BQimBInbs_"
       },
       "source": [
-        "### 30 단계 : 최소 신장 트리===========**"
+        "### 31 단계 : 최소 신장 트리===========**"
       ]
     },
     {
@@ -10750,7 +10956,7 @@
         "id": "SVWsWXeW85B9"
       },
       "source": [
-        "### 31 단계 : 트리에서의 동적 계획법===========**"
+        "### 32 단계 : 트리에서의 동적 계획법===========**"
       ]
     },
     {
@@ -11031,7 +11237,7 @@
         "id": "0l8CJACU8_ZX"
       },
       "source": [
-        "### 32 단계 : 기하===========**"
+        "### 33 단계 : 기하===========**"
       ]
     },
     {
@@ -11557,7 +11763,7 @@
         "id": "fwCGk-rKnTUM"
       },
       "source": [
-        "### 33 단계 : 동적 계획법 3(비트마스크, 원형 구성)===========**"
+        "### 34 단계 : 동적 계획법 3(비트마스크, 원형 구성)===========**"
       ]
     },
     {
@@ -11949,7 +12155,7 @@
         "id": "A1uz7OJKnZV5"
       },
       "source": [
-        "### 34 단계 : ===========**"
+        "### 35 단계 : ===========**"
       ]
     },
     {
@@ -11978,7 +12184,6 @@
         "q = [0] * m\n",
         "\n",
         "k = 0\n",
-        "\n",
         "for i in range(1,m):\n",
         "\twhile k > 0 and p[i] != p[k]:\n",
         "\t\tk = q[k-1]\n",
@@ -12107,7 +12312,7 @@
         "id": "gzlV0rJYiuyu"
       },
       "source": [
-        "#### ㅁ"
+        "####  10266번"
       ]
     },
     {
@@ -12120,7 +12325,52 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def kmp(p, t):\n",
+        "    m = len(p)\n",
+        "    q = [0] * m\n",
+        "\n",
+        "    k = 0\n",
+        "    for i in range(1,m):\n",
+        "        while k > 0 and p[i] != p[k]:\n",
+        "            k = q[k-1]\n",
+        "        if p[i] == p[k]:\n",
+        "            k += 1\n",
+        "            q[i] = k\n",
+        "\n",
+        "    k = 0\n",
+        "    for i in range(len(t)):\t\n",
+        "        while k > 0 and t[i] != p[k]:\n",
+        "            k = q[k-1]\n",
+        "            \n",
+        "        if t[i] == p[k]:\n",
+        "            if k == m - 1:\n",
+        "                return True\n",
+        "            else:\n",
+        "                k += 1\n",
+        "    return False\n",
+        "\n",
         "def main():\n",
+        "    n = int(input())\n",
+        "\n",
+        "    A = list(map(int, input().split()))\n",
+        "    B = list(map(int, input().split()))\n",
+        "\n",
+        "    A.sort()\n",
+        "    B.sort()\n",
+        "    B = B + B\n",
+        "    l1 = [A[i] - A[i-1] for i in range(1,n)]\n",
+        "    l2 = [B[i] - B[i-1] for i in range(1,2*n)]\n",
+        "\n",
+        "    def angle(x):\n",
+        "        return x if x >= 0 else 360000 + x\n",
+        "\n",
+        "    l1 = list(map(angle, l1))\n",
+        "    l2 = list(map(angle, l2))\n",
+        "    \n",
+        "    if kmp(l1, l2):\n",
+        "        print('possible')\n",
+        "    else:\n",
+        "        print('impossible')\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -12134,7 +12384,7 @@
         "id": "LcszqBMxiu2r"
       },
       "source": [
-        "#### "
+        "####  (*)14725번 : Trie 구조"
       ]
     },
     {
@@ -12143,11 +12393,36 @@
         "id": "-D_rEavIiu2s"
       },
       "source": [
+        "# https://developmentdiary.tistory.com/458\n",
+        "# 트라이 구조\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    n = int(input())\n",
+        "\n",
+        "    s = []\n",
+        "    for _ in range(n):\n",
+        "        s.append(list(input().rstrip('\\n').split())[1:])\n",
+        "\n",
+        "    s.sort()\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        if not i:\n",
+        "            for j in range(len(s[i])):\n",
+        "                print('--'*j + s[i][j])\n",
+        "        \n",
+        "        else:\n",
+        "            cnt = -1\n",
+        "            for j in range(len(s[i])):\n",
+        "                if len(s[i-1]) <= j or s[i-1][j] != s[i][j]:\n",
+        "                    break\n",
+        "                else:\n",
+        "                    cnt = j\n",
+        "            \n",
+        "            for j in range(cnt + 1, len(s[i])):\n",
+        "                print('--' * j + s[i][j])\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
