--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -233,7 +233,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyN9Y8tvHyPAG5OD0hyfNEKh",
+      "authorship_tag": "ABX9TyOFP7Ay3XbjvVWjxtl21JXS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4518,7 +4518,7 @@
         "id": "50_NVyaFy-LT"
       },
       "source": [
-        "#### "
+        "####  2559번"
       ]
     },
     {
@@ -4528,13 +4528,28 @@
       },
       "source": [
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    n, k = map(int, input().split())\n",
+        "\n",
+        "    s = list(map(int, input().split()))\n",
+        "\n",
+        "    res = [0] * (n+1)                       # 누적합 리스트 생성\n",
+        "\n",
+        "    for i in range(n):                      # 수의 개수 만큼 반복\n",
+        "        res[i+1] = res[i] + s[i]                # 누적합 계산\n",
+        "\n",
+        "    max = -1e9\n",
+        "    for i in range(n-k+1):\n",
+        "        if max < res[i+k] - res[i]:\n",
+        "            max = res[i+k] - res[i]\n",
+        "\n",
+        "    print(max)\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
+        "    main()                      # 메인 함수 실행 "
       ],
       "execution_count": null,
       "outputs": []
