--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -233,7 +233,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyOFP7Ay3XbjvVWjxtl21JXS",
+      "authorship_tag": "ABX9TyNgaATsoB/tu8xjRPcE18v3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4560,7 +4560,7 @@
         "id": "Seh2rD3ty-SC"
       },
       "source": [
-        "#### "
+        "####  16139번"
       ]
     },
     {
@@ -4574,6 +4574,25 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    s = input().rstrip('\\n')\n",
+        "    res = []\n",
+        "    res.append([0 for _ in range(26)])\n",
+        "\n",
+        "    for i in range(len(s)):\n",
+        "        t = ord(s[i]) - 97\n",
+        "        \n",
+        "        list1 = res[-1].copy()\n",
+        "        list1[t] += 1\n",
+        "\n",
+        "        res.append(list1)\n",
+        "\n",
+        "    q = int(input())\n",
+        "    for _ in range(q):\n",
+        "        a, l, r = input().rstrip('\\n').split()\n",
+        "\n",
+        "        x = ord(a) - 97\n",
+        "        print(res[int(r)+1][x] - res[int(l)][x])\n",
+        "\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
