Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -233,7 +233,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyNgaATsoB/tu8xjRPcE18v3",
+      "authorship_tag": "ABX9TyOPRvoihx+uO1HU1/nLC9zE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4633,7 +4633,7 @@
         "id": "Zs_32YGiy-e9"
       },
       "source": [
-        "#### "
+        "####  11660번"
       ]
     },
     {
@@ -4647,7 +4647,35 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    n, m = map(int, input().split())\n",
+        "\n",
+        "    s = []\n",
+        "    for _ in range(n):\n",
+        "        s.append(list(map(int, input().split())))\n",
         "    \n",
+        "    dp = [[0] * (n+1) for _ in range(n+1)]\n",
+        "\n",
+        "    for i in range(1,n+1):\n",
+        "        for j in range(1,n+1):\n",
+        "            dp[i][j] = dp[i][j-1] + dp[i-1][j] - dp[i-1][j-1]+ s[i-1][j-1]\n",
+        "\n",
+        "    for _ in range(m):\n",
+        "        x1, y1, x2, y2 = map(int, input().split())\n",
+        "\n",
+        "        result = dp[x2][y2]\n",
+        "        cnt = 0\n",
+        "        if x1 > 1:\n",
+        "            cnt += 1\n",
+        "            result -= dp[x1-1][y2]\n",
+        "        \n",
+        "        if y1 > 1:\n",
+        "            cnt += 1\n",
+        "            result -= dp[x2][y1-1]\n",
+        "        \n",
+        "        if cnt == 2:\n",
+        "            result += dp[x1 - 1][y1 - 1]\n",
+        "\n",
+        "        print(result)\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
