Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -170,7 +170,6 @@
         "sYf1TsbxnTUM",
         "YTYcjpPmy4pj",
         "Juei-roPnbMe",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -230,10 +229,9 @@
         "ALUnbbrdfgjl",
         "6kR76xLjXJBq",
         "bdvgnEAYTsOp",
-        "Hh1tMP58_R_P",
-        "6TLnmQh0IY6S"
+        "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyOPRvoihx+uO1HU1/nLC9zE",
+      "authorship_tag": "ABX9TyMy4BH1Tk56W/ZyUuoKdl54",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4606,7 +4604,7 @@
         "id": "8OMkuM-6y-YY"
       },
       "source": [
-        "#### "
+        "####  (*)10986번"
       ]
     },
     {
@@ -4615,12 +4613,33 @@
         "id": "mTBSu9QKy-YZ"
       },
       "source": [
+        "# https://zoosso.tistory.com/550\n",
+        "# cumsum % 3 까지 생각했지만 그 이후 식 증명이 안됐음.\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    \n",
+        "    n, m = map(int, input().split())\n",
+        "\n",
+        "    s = list(map(int, input().split()))\n",
+        "\n",
+        "    result = [0 for _ in range(n+1)]\n",
+        "\n",
+        "    res = {}\n",
+        "    for i in range(n):\n",
+        "        result[i+1] = (result[i] + s[i]) % m\n",
+        "\n",
+        "        if result[i+1] not in res:\n",
+        "            res[result[i+1]] = 1\n",
+        "        else:\n",
+        "            res[result[i+1]] += 1\n",
+        "    ans = res[0]\n",
+        "\n",
+        "    for v in res.values():\n",
+        "        ans += (v * (v-1)) / 2\n",
+        "    print(int(ans))   \n",
+        "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
@@ -12498,7 +12517,7 @@
         "id": "TIrxMQ3fiu_k"
       },
       "source": [
-        "#### "
+        "####  14425번"
       ]
     },
     {
@@ -12507,14 +12526,92 @@
         "id": "ZTszpQumiu_l"
       },
       "source": [
+        "# 트라이보다 쉽게 풀 수 있는 문제지만, 연습을 위해 트라이로 풀어 봅시다.\n",
+        "\n",
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "class Node(object):\n",
+        "    def __init__(self, key, data=None):\n",
+        "        self.key = key\n",
+        "        self.data = data\n",
+        "        self.children = {}\n",
+        "\n",
+        "class Trie(object):\n",
+        "    def __init__(self):\n",
+        "        self.head = Node(None)\n",
+        "\n",
+        "    \n",
+        "    def insert(self, string):# 문자열 삽입\n",
+        "        curNode = self.head\n",
+        "        \n",
+        "        for char in string: # 삽입할 string 각각의 문자에 대해 자식 Node를 만들며 내려간다.\n",
+        "            \n",
+        "            if char not in curNode.children: # 자식 Node들 중 같은 문자가 없으면 Node 새로 생성\n",
+        "                curNode.children[char] = Node(char)\n",
+        "            \n",
+        "            curNode = curNode.children[char] # 같은 문자가 있으면 해당 노드로 이동\n",
+        "        curNode.data = string\n",
+        "\n",
+        "    \n",
+        "    def search(self, string): # 문자열이 존재하는지 탐색\n",
+        "        curNode = self.head\n",
+        "\n",
+        "        for char in string:\n",
+        "            if char in curNode.children:\n",
+        "                curNode = curNode.children[char]\n",
+        "            else:\n",
+        "                return False\n",
+        "        \n",
+        "        if curNode.data != None:\n",
+        "            return True\n",
+        "\n",
+        "def main():\n",
+        "    n, m = map(int, input().split())\n",
+        "\n",
+        "    # 방법 1 - Trie 자료구조 구현(5908ms)\n",
+        "    wordTrie = Trie()           # 주어진 단어의 정보를 저장할 Trie 객체 생성\n",
+        "    lenWord = [False] * 501     # 주어진 문자열과 길이가 같은 문자열에 대해서만 탐색 진행\n",
+        "\n",
+        "    for _ in range(n):\n",
+        "        word = input().strip()\n",
+        "        wordTrie.insert(word)   # 트라이에 단어 삽입\n",
+        "        lenWord[len(word)] = True\n",
+        "\n",
+        "    ans = 0      # 단어 찾은 갯수\n",
+        "    for _ in range(m):\n",
+        "        word = input().strip()\n",
+        "        if not lenWord[len(word)]:   # 문자열 길이 다르면 탐색 X\n",
+        "            continue\n",
+        "        if wordTrie.search(word):    # 문자열 길이 같으면 탐색 O\n",
+        "            ans += 1\n",
+        "    print(ans)\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행\n",
+        "\n",
+        "''' dict 형태\n",
+        "import sys\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    n, m = map(int, input().split())\n",
+        "\n",
+        "    s = {input().rstrip('\\n') for _ in range(n)}\n",
+        "\n",
+        "    ans = 0\n",
+        "    for _ in range(m):\n",
+        "        t = input().rstrip('\\n')\n",
+        "        if t in s:\n",
+        "            ans += 1\n",
         "    \n",
+        "    print(ans)\n",
+        "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
+        "    main()                      # 메인 함수 실행\n",
+        "'''"
       ],
       "execution_count": null,
       "outputs": []
@@ -15078,10 +15175,72 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1064번"
       ],
       "metadata": {
         "id": "Gp00veVJRo8D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    xa, ya, xb, yb, xc, yc = map(int, input().split())\n",
+        "\n",
+        "    if xa - xb:\n",
+        "        grad = (ya - yb) / (xa - xb)\n",
+        "        if not grad * (xc - xa) - (yc - ya):\n",
+        "            print(-1)\n",
+        "            return\n",
+        "    else:\n",
+        "        if not xa - xc: # a, b, c 점 모두 한 직선\n",
+        "            print(-1)\n",
+        "            return\n",
+        "        \n",
+        "        grad = (ya - yc) / (xa - xc)\n",
+        "        if not grad * (xb - xa) - (yb - ya):\n",
+        "            print(-1)\n",
+        "            return\n",
+        "\n",
+        "    a = ((xa - xb) ** 2 + (ya - yb) ** 2) ** 0.5\n",
+        "    b = ((xb - xc) ** 2 + (yb - yc) ** 2) ** 0.5\n",
+        "    c = ((xc - xa) ** 2 + (yc - ya) ** 2) ** 0.5\n",
+        "\n",
+        "    print(2 * (max(a + b, b + c, c + a) - min(a + b, b + c, c + a)))\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "CjgMxsrTRo8H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "faa08094-69b9-46ef-9bfb-f195b82dc950"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 -1 -7 2 -1 0\n",
+            "-1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "LCOeidk0zLZW"
       }
     },
     {
@@ -15097,7 +15256,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "CjgMxsrTRo8H"
+        "id": "0cGxZyUFzLZa"
       },
       "execution_count": null,
       "outputs": []
