Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyMy4BH1Tk56W/ZyUuoKdl54",
+      "authorship_tag": "ABX9TyNtFLeHvOp0TpkkzGv45Lb6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15216,23 +15216,66 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "CjgMxsrTRo8H",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "faa08094-69b9-46ef-9bfb-f195b82dc950"
+        "id": "CjgMxsrTRo8H"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2 -1 -7 2 -1 0\n",
-            "-1\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1074번"
+      ],
+      "metadata": {
+        "id": "LCOeidk0zLZW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def dfs(n, x, y):\n",
+        "    global ans\n",
+        "\n",
+        "    if n <= 1:\n",
+        "        return\n",
+        "\n",
+        "    if x <= int(n / 2):\n",
+        "        if y <= int(n / 2): # 왼쪽 위\n",
+        "            dfs(int(n/2), x, y)\n",
+        "        else:   # 오른쪽 위\n",
+        "            ans += int(n / 2) ** 2\n",
+        "            dfs(int(n/2), x, y - n/2)\n",
+        "\n",
+        "    else:\n",
+        "        if y <= int(n / 2): # 왼쪽 아래\n",
+        "            ans += 2 * (int(n / 2) ** 2)\n",
+        "            dfs(int(n/2), x-n/2, y)\n",
+        "        else:       # 오른쪽 아래\n",
+        "            ans += 3 * (int(n / 2) ** 2)\n",
+        "            dfs(int(n/2), x-n/2, y-n/2)\n",
+        "\n",
+        "def main():\n",
+        "    global ans\n",
+        "    N, r, c = map(int ,input().split())\n",
+        "\n",
+        "    ans = 0\n",
+        "    dfs(2**N, r+1, c+1)\n",
+        "    print(ans)\n",
+        "\n",
+        "    \n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "0cGxZyUFzLZa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -15240,7 +15283,7 @@
         "####"
       ],
       "metadata": {
-        "id": "LCOeidk0zLZW"
+        "id": "6YNZa2FLFH50"
       }
     },
     {
@@ -15256,7 +15299,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "0cGxZyUFzLZa"
+        "id": "aRsCP9L-FH55"
       },
       "execution_count": null,
       "outputs": []
