Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyNtFLeHvOp0TpkkzGv45Lb6",
+      "authorship_tag": "ABX9TyOYl6RQrWzJSuPADYeuEUFf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,7 +266,12 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':  # 스크립트 파일을 메인프로그램과 모듈로 사용 할 때를 구분하기 위한 용도\n",
-        "    main()                  # 파이썬은 시작점이 지정되어있지 않아서"
+        "    main()                  # 파이썬은 시작점이 지정되어있지 않아서\n",
+        "\n",
+        "ctrl + z => enter 입력 종료\n",
+        "\n",
+        "# 문제의 정답이 여러가지인 경우에는 스페셜 저지로 채점 => 2.00 의 값이 2.0 으로 출력되면 틀림.\n",
+        "# https://colorscripter.com/ : 코드 공유 사이트, url 형으로 변환 가능."
       ],
       "metadata": {
         "id": "6V1opzHxN2aU"
@@ -12542,7 +12547,6 @@
         "    def __init__(self):\n",
         "        self.head = Node(None)\n",
         "\n",
-        "    \n",
         "    def insert(self, string):# 문자열 삽입\n",
         "        curNode = self.head\n",
         "        \n",
@@ -12622,7 +12626,7 @@
         "id": "eoCzVsGCyBY4"
       },
       "source": [
-        "#### "
+        "####  5670번"
       ]
     },
     {
@@ -12631,14 +12635,81 @@
         "id": "yCKq7XEwyBY8"
       },
       "source": [
+        "# 2.00 을 2.0으로 출력하는 방법의 문제 때문에 많은 시간 소요. 스페셜 저지인지 찾아보자.\n",
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "class Node(object):\n",
+        "    def __init__(self, key, data=None):\n",
+        "        self.key = key\n",
+        "        self.data = data\n",
+        "        self.children = {}\n",
+        "\n",
+        "class Trie(object):\n",
+        "    def __init__(self):\n",
+        "        self.head = Node(None)\n",
+        "\n",
+        "    def insert(self, string):# 문자열 삽입\n",
+        "        curNode = self.head\n",
+        "        \n",
+        "        for char in string: # 삽입할 string 각각의 문자에 대해 자식 Node를 만들며 내려간다.    \n",
+        "            if char not in curNode.children: # 자식 Node들 중 같은 문자가 없으면 Node 새로 생성\n",
+        "                curNode.children[char] = Node(char)\n",
+        "            \n",
+        "            curNode = curNode.children[char] # 같은 문자가 있으면 해당 노드로 이동\n",
+        "        curNode.data = string\n",
+        "\n",
+        "    def count(self, string):\n",
+        "        curNode = self.head\n",
+        "        curNode = curNode.children[string[0]]\n",
+        "\n",
+        "        cnt = 1\n",
+        "        for char in string[1:]: # 사전에 있는 단어를 찾는다 가정\n",
+        "            if len(curNode.children) > 1: # 자식이 둘 이상인 경우\n",
+        "                cnt += 1\n",
+        "\n",
+        "            if curNode.data and len(curNode.children) == 1: # 사전의 어떤 단어의 끝이고 자식이 있는경우\n",
+        "                cnt += 1\n",
+        "\n",
+        "            curNode = curNode.children[char]\n",
+        "                       \n",
+        "        return cnt\n",
+        "    \n",
+        "    def search(self, string): # 문자열이 존재하는지 탐색\n",
+        "        curNode = self.head\n",
+        "\n",
+        "        for char in string:\n",
+        "            if char in curNode.children:\n",
+        "                curNode = curNode.children[char]\n",
+        "            else:\n",
+        "                return False\n",
+        "        \n",
+        "        if curNode.data != None:\n",
+        "            return True\n",
+        "\n",
         "def main():\n",
+        "    n = int(input())\n",
+        "\n",
+        "    wordTrie = Trie()           # 주어진 단어의 정보를 저장할 Trie 객체 생성\n",
+        "\n",
+        "    dict = []\n",
+        "    for _ in range(n):\n",
+        "        word = input().rstrip('\\n')\n",
+        "        dict.append(word)\n",
+        "        wordTrie.insert(word)   # 트라이에 단어 삽입\n",
+        "\n",
+        "    ans = 0     \n",
+        "    for i in dict:\n",
+        "        ans += wordTrie.count(i)\n",
+        "    \n",
+        "    print(f'{round(ans / n, 2):.2f}')\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
+        "    while True:\n",
+        "        try:\n",
+        "            main()                      # 메인 함수 실행\n",
+        "        except:\n",
+        "            break"
       ],
       "execution_count": null,
       "outputs": []
