Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyOYl6RQrWzJSuPADYeuEUFf",
+      "authorship_tag": "ABX9TyM+MxB2tEebLL3eY0J/0mRL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12636,6 +12636,7 @@
       },
       "source": [
         "# 2.00 을 2.0으로 출력하는 방법의 문제 때문에 많은 시간 소요. 스페셜 저지인지 찾아보자.\n",
+        "# Trie 구조를 바로 사용하므로 시간 복잡도를 줄일 수 있음\n",
         "import sys\n",
         "input = sys.stdin.readline\n",
         "\n",
@@ -15351,10 +15352,134 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1094번"
       ],
       "metadata": {
         "id": "6YNZa2FLFH50"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "#sys.setrecursionlimit(int(1e9))\n",
+        "#input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    x = int(input())\n",
+        "\n",
+        "    l = [64]\n",
+        "    \n",
+        "    while True:\n",
+        "        if sum(l) <= x:\n",
+        "            break\n",
+        "            \n",
+        "        l.sort()\n",
+        "        t = l[0]\n",
+        "        l += [t/2, t/2]\n",
+        "\n",
+        "        if sum(l[1:-1]) >= x:\n",
+        "            l = l[1:-1]\n",
+        "        else:\n",
+        "            l = l[1:]\n",
+        "        \n",
+        "        \n",
+        "    \n",
+        "    print(l)\n",
+        "    print(sum(l) // x)\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "aRsCP9L-FH55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b96bc656-df36-4965-eb90-3305a9b5fccb"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "23\n",
+            "[2.0, 4.0, 16.0, 1.0]\n",
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1120번"
+      ],
+      "metadata": {
+        "id": "ifIL4DrH_hsq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    a, b = input().rstrip('\\n').split()\n",
+        "\n",
+        "    p1 = \n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "OcNrJNFe_hsr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 1252번"
+      ],
+      "metadata": {
+        "id": "V3koBVOiBt1v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "#input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    a, b = input().rstrip('\\n').split()\n",
+        "    \n",
+        "    print(bin(int(a,2) + int(b,2))[2:])\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "uVzw5a_7Bt1v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "PRXjx5I6Cpo2"
       }
     },
     {
@@ -15370,7 +15495,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "aRsCP9L-FH55"
+        "id": "xLk9ACZ5Cpo2"
       },
       "execution_count": null,
       "outputs": []
