Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyM+MxB2tEebLL3eY0J/0mRL",
+      "authorship_tag": "ABX9TyMMtb/X7NEccgYFRtOAZxsr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15363,7 +15363,7 @@
       "source": [
         "import sys\n",
         "#sys.setrecursionlimit(int(1e9))\n",
-        "#input = sys.stdin.readline\n",
+        "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
         "    x = int(input())\n",
@@ -15373,44 +15373,26 @@
         "    while True:\n",
         "        if sum(l) <= x:\n",
         "            break\n",
-        "            \n",
-        "        l.sort()\n",
-        "        t = l[0]\n",
-        "        l += [t/2, t/2]\n",
-        "\n",
-        "        if sum(l[1:-1]) >= x:\n",
-        "            l = l[1:-1]\n",
-        "        else:\n",
-        "            l = l[1:]\n",
-        "        \n",
-        "        \n",
+        "               \n",
+        "        t = l[0] / 2\n",
+        "        l += [t, t]\n",
+        "        l = l[1:]\n",
         "    \n",
-        "    print(l)\n",
-        "    print(sum(l) // x)\n",
+        "        if sum(l) - t >= x:\n",
+        "            l = l[:-1]\n",
+        "        l.sort()\n",
+        "\n",
+        "    print(len(l))\n",
         "\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "aRsCP9L-FH55",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b96bc656-df36-4965-eb90-3305a9b5fccb"
+        "id": "aRsCP9L-FH55"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "23\n",
-            "[2.0, 4.0, 16.0, 1.0]\n",
-            "1.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
